# microarch_labs

./: .gitignore  run.bat  set_lab.bat
lab1/ex1/: Cargo.toml
lab1/ex1/.cargo/: config.toml
lab1/ex1/src/: main.rs
lab1/spare/: main1.js  main3.js
lab2/main/: Cargo.toml
lab2/main/src/: main.rs
lab2/spare/: main1.rs  main_btn_edge.rs  main_btn_pressed.rs  main_ledblink.rs  main_traffic.rs  mainled.rs  morse.rs
lab3/main/: Cargo.toml
lab3/main/src/: main.rs
lab3/spare/: m1_led_25.rs  main2.rs  photoresistor_test.rs  stages.rs  switch_led3.rs
lab4/main/src/: main.rs
lab4/spare/: lblink_1.rs  lblink_2.rs  lblink_4hz.rs  led_control_3tasks.rs  led_control_either.rs  led_control_enum.rs  led_control_signal.rs  main_button_example.rs  traffic_buzzer.rs  traffic_join.rs  traffic_select.rs
lab5/spare/: adeg.rs  digital_sens.rs  example1.rs  gyroX.rs  screen_ex.rs  whoami.rs
lab6/spare/: bmp280_sensor_with_compensation.rs  bmp280_temperature.rs  bmp280_with_eeprom.rs  find_devices.rs  i2c_bmp280.rs  i2c_bmp280_2.rs  i2c_example.rs
lab7/: main copy 2.rs  main copy 3.rs  main copy.rs  main.rs
template/: Cargo.toml
template/src/: main.rs
web_app_example/app/: Cargo.toml
web_app_example/app/src/: main.rs
