[package]
name = "pico_robot_control"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }  # Add this line
serde_derive = "1.0"
reqwest = "0.12.15"
env_logger = "0.11.8"
urlencoding = "2.1.3"  # Add this line

